Add RoleMapperService